--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,10 @@
-/*VARIABLES*/
+/* IMPORTS */
+/* font-family: "Sedan SC", serif; */
+@import url('https://fonts.googleapis.com/css2?family=Sedan+SC&display=swap');
+/* font-family: "Joan", serif; */
+@import url('https://fonts.googleapis.com/css2?family=Joan&display=swap');
+
+/* VARIABLES */
 :root{
     /*COLOR PALETTE*/
     --black: #080908;
@@ -11,16 +17,20 @@
     --red1: #fe3b3b;
     --red2: #852626;
     --red3: #a80c2b;  
+
     /*FONT-FAMILY*/
-    --font-title: Georgia, Garamond, Verdana, 'Arial Black, Tahoma';
-    --font-text: 'Palatino', 'Times New Roman', Times, Georgia, 'Droid Serif', 'Noto Serif';  
+    --font-title: "Sedan SC", serif;
+    --font-subtitle: 'Palatino', 'Times New Roman', Times, Georgia, 'Droid Serif', 'Noto Serif';  
+    --font-text: "Joan", serif;
+    
     /*FONT-SIZE*/
-    --font-size-base: 12px;
+    --font-size-base: 10px;
     --font-size-1: 1rem;
-    --font-size-2: 1.33rem;
-    --font-size-3: 1.5rem;
-    --font-size-4: 1.67rem;
-    --font-size-5: 1.83rem;
+    --font-size-2: 1.3rem;
+    --font-size-3: 2rem;
+    --font-size-4: 2.5rem;
+    --font-size-5: 3rem;
+
     /*FONT-WEIGHT*/
     --font-weight-1: 200;
     --font-weight-2: 300;
@@ -30,71 +40,197 @@
     --font-weight-6: 800;
 }
 
-/* EFFECTS */
-.hide{display:none;}
-.turngray{filter: grayscale(100%); -webkit-filter: grayscale(100%); animation: all 2s linear;}
-.turncolor{filter: grayscale(0%); -webkit-filter: grayscale(0%); animation: all 2s linear;}
+/* GENERAL SETTINGS */
 
-/*FLEXBOX SETTINGS */
-.container {display: flex;}
-.column{flex-direction: column;}
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 
-/*BODY*/
-body{margin: 0; padding: 0; border: 0; font-size: var(--font-size-base); background: var(--white3);}
+html {
+    font-size: 62.5%;
+}
 
+.section-title {
+    font-size: 2.6em;
+    font-family: var(--font-title);
+    margin-top: 1.6rem;
+}
 
 /* HEADER */
-header{display: flex; justify-content: space-around; height: 80px; background: var(--white3);}
+.main-header {
+    background-color: var(--white1);
+    display: flex;
+    flex-direction: column;
+}
 
-.logo {display: flex; align-items: center;}
-.logo a {font-size: 1em; color: var(--black); font-family: var(--font-title); font-weight: var(--font-weight-2); text-decoration: none;}
-.logo a:hover{color: var(--red2); transition: all 1.2s ease;}
+.main-header__title {
+    margin: 2rem auto;
+    color: var(--darkgray);
+    text-decoration: none;
+    text-align: center;
+    font-size: 3.4rem;
+    font-family: var(--font-title);
+}
 
-.nav-container{display: flex; align-items: center; margin-left: 8rem}
-nav ul, nav li{padding: 4px; margin: 0; list-style: none;}
-nav ul{display: flex;}
-nav a {display: block; padding: 10px; text-decoration: none; color: var(--darkgray);font-size: var(--font-size-2);}
-nav a:hover {background: var(--red2); color: var(--white2); transition: all 1.2s linear}
-.nav-button{display: none;}
+.main-nav__list {
+    text-align: center;
+    list-style-type: none;
+}
 
-/*ABOUT*/
-.hero-container{margin: 0 auto; background: var(--red2);}
-.hero-container figure{color: var(--white2); font-size: var(--font-size-2);}
+.main-nav__list li a{
+    color: var(--white3);
+    text-decoration: none;
+    font-size: 2rem;
+    padding: 2rem;
+    display: block;
+    background: var(--black);
+}
 
-/*CONTENT SECTIONS*/
-#about{background: var(--black); color: var(--white1); margin-bottom: 60px;}
-.profile-figure {flex-flow: column wrap; align-items: center;}
+.main-nav__list li a:hover{
+    background: var(--red3);
+    transition: all 400ms linear;
+}
 
-#title{display: flex; justify-content: center; text-align: center; align-items: center;}
-.about-title {border-bottom: 2px solid var(--white2); margin-top: 8vh;}
-.about-title h1{font-size: 40px; font-family: var(--font-title);}
-.about-title h2{font-size: 20px; font-family: var(--font-title);}
+/* HERO */
+.hero {
+    background:var(--red2);
+}
 
-article.container{margin-top: 20vh; margin-bottom: 20vh;}
-article.container h1{align-self: center; font-size: 20px; font-family: var(--font-title);}
-article.container p{text-align: justify; font-size: 18px; font-family: var(--font-text); padding: 20px;}
+.hero_wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
-#publications{background: var(--white3); color: var(--red1); display: flex; flex-direction: column; justify-content: center;}
-#publications h1{font-size: 40px; font-family: var(--font-title); align-self: center; border-bottom: 2px solid var(--darkgray);}
-.book-section{align-items: center; margin: 40px; display: flex; flex-direction: row; justify-content: center;}
-.book-item img{width: 400px; height: 500px; filter: grayscale(100%); -webkit-filter: grayscale(100%);}
+.hero_wrapper img {
+    box-sizing: border-box;
+    width: 100%;
+}
 
+.hero_wrapper h1 {
+    color: var(--white3);
+    font-weight: var(--font-weight-1);
+    font-family: var(--font-title);
+    font-size: 2.4rem;
+    padding: 2rem 0;
+}
 
-/*FOOTER*/
-#footer{background: var(--black); color: var(--white2); font-size: 28px; padding: 60px; display: flex; flex-flow: column wrap; align-items: center;}
-#footer a{color: var(--white2);}
+/* ABOUT */
+#about{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 3rem;
+}
 
-/*MEDIA QUERY*/
-/*@media (max-width: 360px) {
-        .header-container{justify-content: space-around;}
-        .header-nav{display: none;}
-        .header-title{width: 100%; font-size: var(--font-size-1);}
-        .header-nav-button{
-            width: 10px;
-            height: 10px;
-            display: flex; 
-            flex: 1;
-            text-decoration: none;
-            border: 0px; 
-    }
-}*/
+#about .section-title {
+    margin-top: 4rem;
+}
+
+.about-wrapper {
+    flex-direction: row;
+    align-items: center;
+    gap: 4rem;
+    padding: 1.6rem;
+}
+
+.about-item{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.about-item__title{
+    font-family: var(--font-title);
+    font-size: 2.2rem;
+    position: relative;
+}
+
+.about-item__title::before{
+    content: "";
+    width: 1rem;
+    height: .2rem;
+    position: absolute;
+    top: 1.6rem;
+    margin-left: -.75em;
+    background-color: var(--darkgray);
+}
+
+.about-item__title::after{
+    content: "";
+    width: 1rem;
+    height: .2rem;
+    position: absolute;
+    top: 1.6rem;
+    margin-left: 1rem;
+    background-color: var(--darkgray);
+}
+
+.about-item__text {
+    width: 30ch;
+    font-family: var(--font-text);
+    font-size: 1.8rem;
+    padding: .5rem;
+    line-height: 1.4;
+    text-align: center;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+
+/* BOOKS */
+.books-wrapper{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: var(--white3);
+}
+
+.books-grid {
+    width: 100%;
+    display: flex;
+    flex-flow: row wrap;
+    margin-top: 1rem;
+}
+
+.book-item {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 3rem 1.2rem;
+}
+
+.book-item h3 {
+    width: 22ch;
+    font-family: var(--font-text);
+    font-size: 2rem;
+    text-align: center;
+    line-height: 1.3;
+    margin-bottom: 1.4rem;
+}
+
+.book-item img {
+    box-sizing: border-box;
+    width: 100%;
+}
+
+/* FOOTER */
+.footer {
+    background: var(--darkgray);
+    color: var(--white1);
+    padding: 6rem 1.6rem;
+    display: flex;
+    justify-content: center;
+}
+
+.footer__copyright {
+    font-style: italic;
+    font-size: 1.8rem;
+}
+
+.footer__copyright a {
+    font-style: normal;
+    color: var(--white3);
+}
